# python_module

./: .gitignore  README.md
bars-search/: .env  found_bars.html  main.py  pyproject.toml
fake-people/: main.py
password-strength/: main.py
photo-editing/: main.py
sending_emails/: main.py
speech_transliteration/: main.py  pyproject.toml
timer-in-telegram/: main.py  pyproject.toml
turning-earth/: main.py
